# OperationsInfo

./: .coverage  .gitignore  README.md  pyproject.toml
src/: main.py  operation_class.py  path_to_op_list.py  utils.py
tests/: test_utils.py
